--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
-          apt-get install -y gromacs
+          sudo apt-get install -y –no-install-recommends gromacs
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f tests/requirements.txt ] ; then pip install -r tests/requirements.txt ; fi
 
