--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: [3.11]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -37,6 +37,7 @@ jobs:
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
+          sudo apt-get update
           sudo apt-get install --no-install-recommends --yes gromacs
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f tests/requirements.txt ] ; then pip install -r tests/requirements.txt ; fi
