--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -70,3 +70,8 @@ jobs:
           # If a description is provided, the action will use it to create an annotated tag. If none is given, the action will create a lightweight tag.
           # Optional
           description: This is the latest version of kevinsawade/cleanup_sims
+
+      - name: Publish a Python distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
